<resources>
    <string name="app_name">想要城</string>
    <string name="copyright">© %d 想要城Takewant 版權所有</string>
    <string name="app_uri_scheme">takewantandroid</string>
    <string name="register_fragment_title">注冊賬號</string>
    <string name="login_fragment_title">登入</string>
    <string name="security_setting_fragment_title">安全設置</string>
    <string name="new_notification_setting">新消息設置</string>
    <string name="_setting_fragment_title">安全設置</string>
    <string name="payment_password_fragment_title">設置支付密碼</string>
    <string name="modify_payment_password">修改支付密碼</string>
    <string name="payment_password_hint">請輸入6位數字</string>
    <string name="reset_password_fragment_title">重置密碼</string>
    <string name="reset_password_confirm_password_hint">請再次輸入密碼</string>
    <string name="input_pay_password_hint">請輸入付款密碼</string>
    <string name="text_my_status">我的狀態</string>
    <string name="personal_info_fragment_title">個人信息</string>
    <string name="mobile_phone_number">手機號</string>
    <string name="mobile_phone_number_">手機號:</string>
    <string name="text_avatar">頭像</string>
    <string name="text_user_name">用戶名</string>
    <string name="text_nickname">暱稱</string>
    <string name="text_gender">性別</string>
    <string name="text_birthday">生日</string>
    <string name="text_age">年齡</string>
    <string name="text_marriage">婚姻</string>
    <string name="text_location">所在地區</string>
    <string name="text_advisory_service">咨詢客服</string>
    <string name="text_dial">撥打電話</string>
    <string name="text_not_set">未設置</string>
    <string name="text_secret">保密</string>
    <string name="text_single">未婚</string>
    <string name="text_married">已婚</string>
    <string name="text_marry_status">婚姻狀況</string>
    <string name="text_divorce">離婚</string>
    <string name="text_others_marry_status">其他</string>
    <string name="text_not_login">您未登錄</string>
    <string name="text_contact">通訊錄</string>
    <string name="text_new_friend">新的朋友</string>
    <string name="text_scan_qr_code">掃一掃</string>
    <string name="text_add_friend">添加朋友</string>
    <string name="text_setting">設置</string>
    <string name="text_my_qr_code">我的二維碼</string>
    <string name="text_qr_code_card">二維碼名片</string>
    <string name="text_scan_qr_code_add_friend">用想要掃描二維碼，加我為朋友吧～</string>
    <string name="text_member_signature">個性簽名</string>
    <string name="text_my_e_name_card">我的名片</string>
    <string name="text_security_setting">安全設置</string>
    <string name="text_logistics_address_setting">收貨地址設置</string>
    <string name="text_about_takewant">關於想要城</string>
    <string name="text_my_document">我的檔案</string>
    <string name="text_basic_info">基礎信息</string>
    <string name="text_size_assistant">尺碼助手</string>
    <string name="text_height">身高(cm):</string>
    <string name="text_weight">體重(kg):</string>
    <string name="text_foot_size">腳底長(cm):</string>
    <string name="text_breast_size">胸圍(cm):</string>
    <string name="text_waistline">腰圍(cm):</string>
    <string name="text_hip_line">臀圍(cm):</string>
    <string name="text_eyes_radio">眼睛度數:</string>
    <string name="text_left_eye">左眼:</string>
    <string name="text_right_eye">右眼:</string>
    <string name="text_size_assistant_desc">您的資料不會公開，僅用於產品的選購推薦</string>
    <string name="text_education_experience">教育與工作</string>
    <string name="text_my_resume">我的簡歷</string>
    <string name="text_open_resume">您的簡歷當前為公開狀態</string>
    <string name="text_init_resume">簡歷公開</string>
    <string name="text_select_current_status">請選擇您的當前狀態</string>
    <string name="text_work_time">工作時長:</string>
    <string name="text_select_work_time">請選擇您的工作時長</string>
    <string name="text_eduction">學歷</string>
    <string name="text_select_education">請選擇您的學歷</string>
    <string name="text_expect_position">期望職位:</string>
    <string name="text_expect_position_title">期望職位</string>
    <string name="text_input_expect_position">請輸入您的期望職位</string>
    <string name="text_select_position_key_word">請選擇您的職位關鍵詞</string>
    <string name="text_position_key_word">職位關鍵詞:</string>
    <string name="text_position_category">職位類型:</string>
    <string name="text_select_position_category">請選擇您的職位類型</string>
    <string name="text_expect_salary">期望薪資</string>
    <string name="text_position_info">職位介紹</string>
    <string name="text_curr_status">當前狀態:</string>
    <string name="text_work_experience">工作經歷</string>
    <string name="text_work_experience_init">當前工作經歷為空</string>
    <string name="text_takewant_introduction">想要城Takewant介紹</string>
    <string name="text_check_update">檢測更新</string>
    <string name="text_secret_terms">私隱條款</string>
    <string name="text_service_contract">服務協議</string>
    <string name="text_goto_rate">去評分</string>
    <string name="text_phone">電話</string>
    <string name="text_distance">距離</string>
    <string name="text_create_post">發表想要</string>
    <string name="text_reply">回覆</string>
    <string name="text_comment_detail">說說詳情</string>
    <string name="text_create_comment">發表說說</string>
    <string name="text_post_detail">想要詳情</string>
    <string name="install_youtube_player_hint">請先安裝YouTube播放器</string>
    <string name="text_message">消息</string>
    <string name="text_logistics_message">交易物流消息</string>
    <string name="text_refund_message">退換貨消息</string>
    <string name="modify_nickname_fragment_title">修改暱稱</string>
    <string name="mall_fragment_title">商城</string>
    <string name="text_time_limited_offer">限時優惠</string>
    <string name="text_order_search">訂單搜索</string>
    <string name="text_platform_coupon_card_pass">平台券卡密</string>
    <string name="input_platform_coupon_card_pass_hint">請輸入平台券卡密</string>
    <string name="text_store_coupon_card_pass">商店券卡密</string>
    <string name="input_store_coupon_card_pass_hint">請輸入商店券卡密</string>
    <string name="text_captcha">驗證碼</string>
    <string name="text_receive_store_coupon_hint">請輸入已獲得的商店券卡密領取商店券\n領取成功后可在購買產品時抵扣訂單金額使用</string>
    <string name="text_receive_platform_coupon_hint">請輸入已獲得的平臺券卡密領取平臺券\n領取成功后可在購買產品時抵扣訂單金額使用</string>
    <string name="text_confidentiality">保密</string>
    <string name="text_male">男</string>
    <string name="text_female">女</string>
    <string name="trust_value_fragment_title">真實值明細(%d)</string>
    <string name="bonus_fragment_title">積分明細(%d)</string>
    <string name="footprint_fragment_title">瀏覽記憶</string>
    <string name="text_goods_evaluation">產品評價</string>
    <string name="text_order_no">訂單編號:</string>
    <string name="text_time_create_order">下單時間:</string>
    <string name="text_time_pay_order">支付時間:</string>
    <string name="text_pay_sn">支付單號:</string>
    <string name="text_time_ship_order">完成時間:</string>
    <string name="text_order_num">訂單編號</string>
    <string name="text_common_used_speech_setting">常用語設置</string>
    <string name="text_add_common_used_speech">添加常用語</string>
    <string name="text_cancel_order">取消訂單</string>
    <string name="text_order_comment">訂單說說</string>
    <string name="text_refund_in_progress">退款中</string>
    <string name="text_have_received">確認收貨</string>
    <string name="text_buy_again">再次購買</string>
    <string name="text_view_logistics">查看物流</string>
    <string name="text_refund_all">全部退款</string>
    <string name="text_delete_order">刪除訂單</string>
    <string name="text_pay_order">支付訂單</string>
    <string name="receipt_info_fragment_title">單據信息</string>
    <string name="text_receipt_header">單據抬頭</string>
    <string name="input_receipt_header_hint">請輸入單據抬頭</string>
    <string name="text_receipt_content">單據內容</string>
    <string name="input_receipt_content_hint">請輸入單據內容</string>
    <string name="text_does_not_need_receipt">不開單據</string>
    <string name="text_save_and_use">保存使用</string>
    <string name="order_detail_fragment_title">訂單詳情</string>
    <string name="input_nickname_hint_simple">請輸入暱稱</string>
    <string name="text_select_gender">性別選擇</string>
    <string name="text_receive_voucher">領券</string>
    <string name="text_promotion">促銷</string>
    <string name="text_unavailable_store_coupon">不可用商店券</string>
    <string name="ok">確定</string>
    <string name="input_mobile_hint">請輸入手機號碼</string>
    <string name="input_sms_code_hint">請輸入驗證碼</string>
    <string name="input_captcha_hint">請輸入驗證碼</string>
    <string name="input_password_hint">請輸入密碼，8%s20位英文字母，符號或數字</string>
    <string name="input_password_confirm_hint">請再次輸入密碼</string>
    <string name="input_nickname_hint">請輸入您的暱稱</string>
    <string name="input_login_password_hint">請輸入密碼，8–20位英文字母、符號或數字</string>
    <string name="get_sms_code">獲取驗證碼</string>
    <string name="text_sms_code_validate_hint">短信已發送至%s，請在%d分鐘內完成驗證</string>
    <string name="text_second">秒</string>
    <string name="input_search_keyword_hint">請輸入搜索關鍵字</string>
    <string name="search_keyword_hint">搜索關鍵字</string>
    <string name="search_friend_hint">搜索好友</string>
    <string name="weixin_not_installed_hint">使用本功能需要先安裝微信</string>
    <string name="login_way_password">密碼</string>
    <string name="login_way_dynamic_code">驗證碼</string>
    <string name="input_personal_profile_hint">新增個人簡介，讓大家更了解你</string>
    <string name="member_signature">我還在認真思考我的個性簽名</string>
    <string name="text_popularity">人緣</string>
    <string name="text_article">想要帖</string>
    <string name="text_mall">商城</string>
    <string name="text_friend">好友</string>
    <string name="text_interactive">互動</string>
    <string name="text_recruitment">招聘</string>
    <string name="text_want_job">事業</string>
    <string name="text_personal_profile">個人簡介</string>
    <string name="text_my_page">個人專頁</string>
    <string name="text_edit_resume">編輯簡歷</string>
    <string name="text_my_application">我的投遞</string>
    <string name="text_contact_me">與我溝通</string>
    <string name="text_about">關於</string>
    <string name="text_want_chat">想聊</string>
    <string name="text_follow_him_square">關注他的</string>
    <string name="category_shop">商店</string>
    <string name="category_commodity">產品</string>
    <string name="category_brand">想要貼</string>
    <string name="text_store_announcement">商店公告</string>
    <string name="text_merchant_introduction">商家介紹</string>
    <string name="text_register">註冊</string>
    <string name="text_register_now">立即注冊</string>
    <string name="text_next_step">下一步</string>
    <string name="text_ok">確認</string>
    <string name="text_forget_password">忘記密碼？</string>
    <string name="text_universal">通用</string>
    <string name="bottom_bar_title_home">首頁</string>
    <string name="bottom_bar_title_message">消息</string>
    <string name="bottom_bar_title_circle">想要圈</string>
    <string name="bottom_bar_title_cart">購物袋</string>
    <string name="bottom_bar_title_my">我的</string>
    <string name="shop_bottom_bar_title_home">首頁</string>
    <string name="shop_bottom_bar_title_commodity">產品</string>
    <string name="shop_bottom_bar_title_category">分類</string>
    <string name="shop_bottom_bar_title_activity">活動</string>
    <string name="shop_bottom_bar_title_customer_service">客服</string>
    <string name="text_store">商店</string>
    <string name="text_goods">產品</string>
    <string name="text_edit">編輯</string>
    <string name="text_select_all">全選</string>
    <string name="text_deadline">選擇日期</string>
    <string name="text_goods_filter">產品篩選</string>
    <string name="text_price_room">價格區間</string>
    <string name="text_lowest_price">最低價</string>
    <string name="text_highest_price">最高價</string>
    <string name="text_promotion_activity">促銷活動</string>
    <string name="text_gift">贈品</string>
    <string name="text_discount">折扣</string>
    <string name="text_reset">重置</string>
    <string name="text_condition">條件</string>
    <string name="text_date">日期</string>
    <string name="text_viewed_most">查看數量</string>
    <string name="text_focused_most">最受關注</string>
    <string name="text_member">城友</string>
    <string name="text_my_follow">我的關注</string>
    <string name="text_delete_follow">取消關注</string>
    <string name="text_free_shipping">包郵</string>
</resources>