<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <!-- 工具欄 -->
    <RelativeLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <com.ftofs.twant.widget.ScaledButton
            android:id="@+id/btn_back"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginStart="7dp"
            android:layout_centerVertical="true"
            app:icon_src="@drawable/icon_back"
            />

        <TextView
            android:id="@+id/tv_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:text="@string/text_my_follow"
            android:textColor="@color/tw_black"
            />
        <TextView
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/tw_black"
            android:text="@string/text_edit"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal"
        android:background="@drawable/border_type_d">
        <com.ftofs.twant.widget.SimpleTabButton
            android:id="@+id/btn_store"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:stb_text="@string/text_store"
            app:stb_stroke_width="2dp"
            app:stb_horizontal_padding="9dp"
            app:stb_use_cap="true"
            />

        <com.ftofs.twant.widget.SimpleTabButton
            android:id="@+id/btn_goods"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:stb_text="@string/text_goods"
            app:stb_stroke_width="2dp"
            app:stb_horizontal_padding="9dp"
            app:stb_use_cap="true"
            />
        <com.ftofs.twant.widget.SimpleTabButton
            android:id="@+id/btn_article"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:stb_text="@string/text_article"
            app:stb_stroke_width="2dp"
            app:stb_horizontal_padding="9dp"
            app:stb_use_cap="true"
            />
        <com.ftofs.twant.widget.SimpleTabButton
            android:id="@+id/btn_recruitment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:stb_text="@string/text_recruitment"
            app:stb_stroke_width="2dp"
            app:stb_horizontal_padding="9dp"
            app:stb_use_cap="true"
            />
        <com.ftofs.twant.widget.SimpleTabButton
            android:id="@+id/btn_member"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:stb_text="@string/text_member"
            app:stb_stroke_width="2dp"
            app:stb_horizontal_padding="9dp"
            app:stb_use_cap="true"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_follow_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/rl_total_operation_container"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:visibility="visible"
        android:background="@drawable/top_separator_box">
        <com.ftofs.twant.widget.ScaledButton
            android:id="@+id/btn_select_all"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginStart="7dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"

            app:icon_src="@drawable/icon_cart_item_unchecked"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_toEndOf="@id/btn_select_all"
            android:layout_centerVertical="true"
            android:text="@string/text_select_all"/>
        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/narrow_red_button"
            android:gravity="center"
            android:text="@string/text_delete_follow"/>
    </RelativeLayout>
</LinearLayout>
