<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tw_light_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <!-- 工具欄 -->
    <RelativeLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/white">
        <com.ftofs.twant.widget.ScaledButton
            android:id="@+id/btn_back"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginStart="7dp"
            android:layout_centerVertical="true"
            app:icon_src="@drawable/icon_back"
            />

        <TextView
            android:id="@+id/tv_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="@color/tw_black"
            android:text="@string/text_want_job"
            />
        <TextView
            android:visibility="gone"
            android:id="@+id/btn_member_resume"
            android:layout_marginEnd="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:textSize="14sp"
            android:textColor="@color/tw_black"
            android:text="@string/text_edit_resume"
            />
    </RelativeLayout>
    <!-- END OF 工具欄 -->
    <LinearLayout
        android:id="@+id/ll_tab_button_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        android:background="@drawable/border_type_d">
        <com.ftofs.twant.widget.SimpleTabButton
            android:id="@+id/btn_my_resume"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:stb_text="@string/text_my_resume"
            app:stb_stroke_width="2dp"
            app:stb_horizontal_padding="9dp"
            app:stb_use_cap="true"
            android:background="@color/tw_white"
            />
        <com.ftofs.twant.widget.SimpleTabButton
            android:id="@+id/btn_my_application"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:stb_text="@string/text_my_application"
            app:stb_stroke_width="2dp"
            app:stb_horizontal_padding="9dp"
            app:stb_use_cap="true"
            android:background="@color/tw_white"
            />

        <com.ftofs.twant.widget.SimpleTabButton
            android:id="@+id/btn_my_follow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:stb_text="@string/text_my_follow"
            app:stb_stroke_width="2dp"
            app:stb_horizontal_padding="9dp"
            app:stb_use_cap="true"
            android:background="@color/tw_white"
            />
        <com.ftofs.twant.widget.SimpleTabButton
            android:id="@+id/btn_contact_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:stb_text="@string/text_contact_me"
            app:stb_stroke_width="2dp"
            app:stb_horizontal_padding="9dp"
            app:stb_use_cap="true"
            android:background="@color/tw_white"

            />
    </LinearLayout>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/ll_tab_button_container"
        android:id="@+id/ll_my_resume_container"
        android:layout_width="match_parent"
        android:background="@color/tw_light_grey"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/ll_my_resume_container"
        android:id="@+id/rv_job_info_list"
        android:layout_width="match_parent"
        android:background="@color/tw_light_grey"
        android:layout_height="0dp"
        android:layout_weight="1">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>